# Engine

./: .gitignore  CMakeLists.txt  ChatEvent.h  Game.cpp  Game.h  TestListener.cpp  TestListener.h  main.cpp
Core/: PriorityQueue.h
Dependencies/Apple/include/glad/: glad.h
Dependencies/Windows/glfw/: CMakeLists.txt
Dependencies/src/: glad.c
Dependencies/src/glad/: glad.c
Event/: CancellableEvent.h  EventListener.h  EventManager.h  EventPriority.h
Shaders/: 2DFrag.glsl
Test/: ChatEvent.h  Game.h  TestListener.h
Test/Event/: ChatEvent.h  Game.cpp  Game.h  TestListener.cpp  TestListener.h
engine/: CMakeLists.txt
engine/core/: Matrix.h  Quaternion.h  Vector.h
engine/graphics/: Camera.cpp  Camera.h  GraphicsEngine.cpp  GraphicsEngine.h  Mesh.cpp  Shader.cpp  Shader.h
engine/graphics/2D/: GraphicsEngine2D.cpp
engine/graphics/3D/: Renderer.cpp  Renderer.h
engine/object/: GameObject.cpp  GameObject.h  Transform.h
engine/scene/: Scene.h  SceneManager.cpp  SceneManager.h
game/: CMakeLists.txt  main.cpp
shaders/: 3DVert.glsl
src/Core/: Axis.h  PriorityQueue.h  Vector.h
src/Event/: CancellableEvent.h  Event.h  EventListener.h  EventManager.h  EventPriority.h
src/Graphics/: GraphicsEngine.cpp  GraphicsEngine.h  Mesh.cpp  Mesh.h  Shader.cpp  Shader.h
src/Graphics/2D/: GraphicsEngine2D.cpp  GraphicsEngine2D.h
src/core/: Axis.h  Matrix.h  PriorityQueue.h  Vector.h
src/event/: CancellableEvent.h  Event.h  EventListener.h  EventManager.h  EventPriority.h
src/graphics/: GraphicsEngine.h  Mesh.h  Shader.h
src/graphics/2D/: GraphicsEngine2D.h
src/scene/: Scene.h  SceneManager.cpp  SceneManager.h
test/: CMakeLists.txt  main.cpp
test/core/: VectorTest.cpp
test/event/: ChatEvent.h  Game.h  TestListener.cpp  TestListener.h
test/scene/: SceneTest.cpp  TestScene.cpp  TestScene.h
